--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <button id="use-password-button" class="use-password-button">GUNAKAN PASSWORD</button>
-        <button id="contact-us-button" class="use-password-button">HUBUNGI KAMI</button>
+        <button id="contact-us-button" class="use-password-button">DAPATKAN SANDI</button>
         <div id="password-input-container" class="password-input-container">
             <input type="text" id="password-input" class="password-input" placeholder="Masukkan Sandi (Nama)">
             <button id="password-submit-button" class="password-submit-button">MASUK</button>
@@ -49,7 +49,7 @@
         <div id="contact-us-container" class="contact-us-container">
             <input type="text" id="contact-us-name" class="contact-us-input" placeholder="Masukkan Nama Kamu">
             <input type="tel" id="contact-us-whatsapp" class="contact-us-input" placeholder="Masukkan Nomor WhatsApp Kamu">
-            <button id="submit-contact-us" class="contact-us-button">KIRIM PESAN</button>
+            <button id="submit-contact-us" class="contact-us-button">DAFTAR</button>
             <p id="contact-us-error-message" class="error-message"></p>
         </div>
         <div id="password-display-container" class="password-display-container">
