--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <img src="https://a.top4top.io/p_33815a0it0.png" alt="Logo" class="logo">
         <h1>DAGET SQUAD +3206</h1>
-        <input type="password" id="password" placeholder="Masukan Kata Sandi">
-        <button type="submit" id="submitBtn">Verifikasi</button>
+        <p>kitab suci utama dalam agama Islam adalah... ( jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil)</p>
+        <input type="password" id="password" placeholder="Masukan Kata jawaban disini">
+        <button type="submit" id="submitBtn">Menjawab</button>
         <p id="message" class="hidden"></p>
     </div>
 
