--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAGET SUAD +3206</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>DAGET SUQAD +3206</title>
     <link rel="stylesheet" href="assets/daget.css">
 </head>
 <body>
     <div class="container">
         <img src="https://a.top4top.io/p_33815a0it0.png" alt="Logo" class="logo">
         <h1>DAGET SQUAD +3206</h1>
-        <p>kitab suci utama dalam agama Islam adalah... ( jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil)</p>
-        <input type="password" id="password" placeholder="Masukan Kata jawaban disini">
-        <button type="submit" id="submitBtn">Menjawab</button>
-        <p id="message" class="hidden"></p>
+        <div class="password-container">
+            <input type="text" id="password" placeholder="Masukan Kata jawaban disini">
+        </div>        <p id="message" class="hidden"></p>
+        <p><strong>1. HARI APA GROUP DAGET SQUAD DI BUAT? </strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
+        <div class="button-container">
+            <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+            <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+            <button type="submit" id="submitBtn">Menjawab</button>
+        </div>
     </div>
 
-    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button left-bottom" target="_blank">CHANEL</a>
-    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button right-bottom" target="_blank">GROUP</a>
+    <div id="success-overlay">
+        <img id="success-image" src="https://a.top4top.io/p_33815a0it0.png" alt="Success">
+        <p id="success-text"><strong>BERHASIL....</strong><br>Jangan Lupa Gabung Group <strong>DAGET SQUAD</strong> ya, dan join chanel RANDOM</p>
+        <div id="loading-bar-container">
+            <div id="loading-bar"></div>
+        </div>
+        <p id="countdown-text">Tunggu... (8)</p>
+    </div>
 
     <script src="assets/daget.js"></script>
 </body>
