--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="password-container">
             <input type="text" id="password" placeholder="Masukan Kata jawaban disini">
         </div>        <p id="message" class="hidden"></p>
-        <p><strong>1. HARI APA GROUP DAGET SQUAD DI BUAT? </strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
+        <p><strong>1. Seorang pedagang memiliki sejumlah telur. Pada hari pertama, ia menjual setengah dari telurnya ditambah 5 butir. Pada hari kedua, ia menjual setengah dari sisa telurnya ditambah 3 butir. Setelah dua hari berjualan, pedagang tersebut masih memiliki 12 butir telur. Berapa jumlah telur pedagang tersebut mula-mula? </strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
         <div class="button-container">
             <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
             <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
