--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="password-container">
             <input type="text" id="password" placeholder="Masukan Kata jawaban disini">
         </div>        <p id="message" class="hidden"></p>
-        <p><strong>1. Seorang pedagang memiliki sejumlah telur. Pada hari pertama, ia menjual setengah dari telurnya ditambah 5 butir. Pada hari kedua, ia menjual setengah dari sisa telurnya ditambah 3 butir. Setelah dua hari berjualan, pedagang tersebut masih memiliki 12 butir telur. Berapa jumlah telur pedagang tersebut mula-mula? </strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
+        <p><strong>1. Seorang pedagang memiliki sejumlah telur. Pada hari pertama, ia menjual setengah dari telurnya ditambah 5 butir. Pada hari kedua, ia menjual setengah dari sisa telurnya ditambah 3 butir. Setelah dua hari berjualan, pedagang tersebut masih memiliki 12 butir telur. Berapa jumlah telur pedagang tersebut mula-mula?
+Silakan dicoba! Jla kamu ingin petunjuk atau jawabannya, beritahu saya.
+</strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
         <div class="button-container">
             <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
             <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
@@ -22,12 +24,17 @@
     </div>
 
     <div id="success-overlay">
-        <img id="success-image" src="https://a.top4top.io/p_33815a0it0.png" alt="Success">
+        <div id="success-video-container">
+            <video id="success-video" controls autoplay muted>
+                <source src="https://e.top4top.io/m_3381upp550.mp4" type="video/mp4">
+                Browser Anda tidak mendukung pemutar video.
+            </video>
+        </div>
         <p id="success-text"><strong>BERHASIL....</strong><br>Jangan Lupa Gabung Group <strong>DAGET SQUAD</strong> ya, dan join chanel RANDOM</p>
         <div id="loading-bar-container">
             <div id="loading-bar"></div>
         </div>
-        <p id="countdown-text">Tunggu... (8)</p>
+        <p id="countdown-text">Iklan... (24)</p>
     </div>
 
     <script src="assets/daget.js"></script>
