--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <div class="password-container">
             <input type="text" id="password" placeholder="Masukan Kata jawaban disini">
         </div>        <p id="message" class="hidden"></p>
-        <p><strong>1. Seorang pedagang memiliki sejumlah telur. Pada hari pertama, ia menjual setengah dari telurnya ditambah 5 butir. Pada hari kedua, ia menjual setengah dari sisa telurnya ditambah 3 butir. Setelah dua hari berjualan, pedagang tersebut masih memiliki 12 butir telur. Berapa jumlah telur pedagang tersebut mula-mula?
-Silakan dicoba! Jla kamu ingin petunjuk atau jawabannya, beritahu saya.
+        <p><strong>1. Berpakah seluruh jumlah  rakaat solat fardu dalam 1 hari?
 </strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
         <div class="button-container">
             <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
