--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="success-overlay">
         <div id="success-video-container">
             <video id="success-video" controls autoplay muted>
-                <source src="assests/Nara1.mp4" type="video/mp4">
+                <source src="https://k.top4top.io/m_33822e8o60.mp4" type="video/mp4">
                 Browser Anda tidak mendukung pemutar video.
             </video>
         </div>
