--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="password-container">
             <input type="text" id="password" placeholder="Masukan Kata jawaban disini">
         </div>        <p id="message" class="hidden"></p>
-        <p><strong>1. Berpakah seluruh jumlah  rakaat solat fardu dalam 1 hari?
+        <p><strong>1. Rukun sholat yang pertama adalah niat.
+?
 </strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
         <div class="button-container">
             <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
