--- a/index.html
+++ b/index.html
@@ -3,40 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>DAGET SUQAD +3206</title>
-    <link rel="stylesheet" href="assets/daget.css">
+    <title>DAGET SUQAD +3206 - Web Quiz Agama</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
         <img src="https://a.top4top.io/p_33815a0it0.png" alt="Logo" class="logo">
-        <h1>DAGET SQUAD +3206</h1>
-        <div class="password-container">
-            <input type="text" id="password" placeholder="Masukan Kata jawaban disini">
-        </div>        <p id="message" class="hidden"></p>
-        <p><strong>1. Rukun sholat yang pertama adalah niat.
-?
-</strong><br><br>⚠️ <strong>PERHATIAN:</strong><br><i>jawaban tidak boleh menggunakan tanda baca dan semua huruf nya kecil</i></p>
-        <div class="button-container">
-            <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
-            <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
-            <button type="submit" id="submitBtn">Menjawab</button>
+        <h1>DAGET SUQAD +3206 - Web Quiz Agama</h1>
+        <p>Jawablah semua pertanyaan di bawah ini dengan benar (huruf kecil tanpa tanda baca).</p>
+
+        <div class="question-container">
+            <div class="question-row">
+                <div class="question">Soal 1: Apa kitab suci agama Islam?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer1">
+                    <button class="answer-button" data-question="1">Jawab</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 2: Siapa nabi terakhir dalam agama Islam?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer2">
+                    <button class="answer-button locked" data-question="2" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 3: Berapa jumlah rukun Islam? (format angka)</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer3">
+                    <button class="answer-button locked" data-question="3" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 4: Apa nama bulan suci dalam agama Islam di mana umat Muslim berpuasa?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer4">
+                    <button class="answer-button locked" data-question="4" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 5: Kemana umat Islam melaksanakan ibadah haji?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer5">
+                    <button class="answer-button locked" data-question="5" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 6: Apa arti dari kata "Allah" dalam agama Islam?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer6">
+                    <button class="answer-button locked" data-question="6" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 7: Berapa jumlah rakaat dalam shalat subuh? (format angka)</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer7">
+                    <button class="answer-button locked" data-question="7" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 8: Apa nama malaikat yang bertugas menyampaikan wahyu kepada Nabi Muhammad SAW?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer8">
+                    <button class="answer-button locked" data-question="8" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 9: Apa nama peristiwa penting dalam sejarah Islam di mana Nabi Muhammad SAW melakukan perjalanan malam dari Masjidil Haram ke Masjidil Aqsa dan kemudian naik ke Sidratul Muntaha? (dua kata)</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer9">
+                    <button class="answer-button locked" data-question="9" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
+
+            <div class="question-row">
+                <div class="question">Soal 10: Apa sebutan bagi orang yang beriman kepada Allah SWT dan mengikuti ajaran Nabi Muhammad SAW?</div>
+                <div class="answer-input-container">
+                    <input type="text" class="answer-input" id="answer10">
+                    <button class="answer-button locked" data-question="10" disabled>Terkunci (00:00:00)</button>
+                </div>
+                <div class="fixed-button-container">
+                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
+                </div>
+            </div>
         </div>
-    </div>
+
+        <p id="message" class="hidden"></p>
+
+        </div>
 
     <div id="success-overlay">
         <div id="success-video-container">
             <video id="success-video" controls autoplay muted>
-                <source src="https://k.top4top.io/m_33822e8o60.mp4" type="video/mp4">
+                <source src="https://e.top4top.io/m_3381upp550.mp4" type="video/mp4">
                 Browser Anda tidak mendukung pemutar video.
             </video>
         </div>
-        <p id="success-text"><strong>BERHASIL....</strong><br>Jangan Lupa Gabung Group <strong>DAGET SQUAD</strong> ya, dan join chanel RANDOM</p>
+        <p id="success-text"><strong>SELAMAT! SEMUA JAWABAN BENAR....</strong><br>Jangan Lupa Gabung Group <strong>DAGET SQUAD</strong> ya, dan join chanel RANDOM</p>
         <div id="loading-bar-container">
             <div id="loading-bar"></div>
+
         </div>
         <p id="countdown-text">Iklan... (24)</p>
     </div>
 
-    <script src="assets/daget.js"></script>
+    <div id="wrong-answer-overlay">
+        <img id="wrong-answer-image" src="https://l.top4top.io/p_3382yabr30.png" alt="Jawaban Salah">
+        <div id="wrong-answer-text">JAWABAN SALAH</div>
+    </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
