--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>DAGET SUQAD +3206 - Web Quiz Agama</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/daget.css">
 </head>
 <body>
     <div class="container">
@@ -158,6 +158,6 @@
         <div id="wrong-answer-text">JAWABAN SALAH</div>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/daget.js"></script>
 </body>
 </html>
