--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>DAGET SUQAD +3206 - Web Quiz Agama</title>
-    <link rel="stylesheet" href="assets/daget.css">
+    <link rel="stylesheet" href="assets/css/daget.css">
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
         <h1>DAGET SUQAD +3206 - Web Quiz Agama</h1>
         <p>Jawablah semua pertanyaan di bawah ini dengan benar (huruf kecil tanpa tanda baca).</p>
 
-        <div class="question-container">
+        </div class="question-container">
             <div class="question-row">
                 <div class="question">Soal 1: Apa kitab suci agama Islam?</div>
                 <div class="answer-input-container">
@@ -32,7 +32,7 @@
                     <button class="answer-button locked" data-question="2" disabled>Terkunci (00:00:00)</button>
                 </div>
                 <div class="fixed-button-container">
-                    <a href="https://whatsapp.com/channel/0029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
+                    <a href="https://whatsapp.com/channel/029VaorBn4FHWq0dEFX993F" class="fixed-button" target="_blank">CHANEL</a>
                     <a href="https://chat.whatsapp.com/KFD8wFX1XDgIrge89SO70L" class="fixed-button" target="_blank">JOIN GROUP</a>
                 </div>
             </div>
@@ -158,6 +158,11 @@
         <div id="wrong-answer-text">JAWABAN SALAH</div>
     </div>
 
-    <script src="assets/daget.js"></script>
+    <script src="assets/js/daget.js"></script>
 </body>
 </html>
+
+
+
+
+
