--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>DAGET SUQAD +3206 - Web Quiz Agama</title>
-    <link rel="stylesheet" href="assets/css/daget.css">
+    <link rel="stylesheet" href="assets/daget.css">
 </head>
 <body>
     <div class="container">
